<resources>
    <string name="app_name">RollDice</string>
    <string name="player_a">Player</string>
    <string name="game_point_a">0</string>
    <string name="player_b">Bot</string>
    <string name="game_point_b">0</string>
    <string name="game_point">Game Point</string>
    <string name="game_point_default">100</string>
    <string name="dice_image_contentDescription">Dice Image</string>
    <string name="game_over_msg">The winner is :\t</string>
    <string name="btn_start_game">Start</string>
    <string name="btn_pause_game">Pause</string>
    <string name="btn_restart_game">Restart</string>
    <string name="btn_continue_game">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="bot_turn">Bot\'s Turn…</string>
    <string name="your_turn">Your Turn…</string>
    <string name="game_over">Game Over!</string>
</resources>