<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true"
                android:layout_centerInParent="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/lbPlayerA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/player_a"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Player A" />

                <TextView
                        android:id="@+id/tvGamePointA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/game_point_a"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/lbPlayerA"
                        app:layout_constraintStart_toStartOf="@+id/lbPlayerA"
                        app:layout_constraintTop_toBottomOf="@+id/lbPlayerA"
                        tools:text="0" />

                <TextView
                        android:id="@+id/lbPlayerB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/player_b"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Player B" />

                <TextView
                        android:id="@+id/tvGamePointB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/game_point_b"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/lbPlayerB"
                        app:layout_constraintStart_toStartOf="@+id/lbPlayerB"
                        app:layout_constraintTop_toBottomOf="@+id/lbPlayerB"
                        tools:text="0" />

                <TextView
                        android:id="@+id/lbGamePoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/game_point"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/lbPlayerB"
                        app:layout_constraintStart_toEndOf="@+id/lbPlayerA"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Game Point" />

                <TextView
                        android:id="@+id/tvGamePoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/game_point_default"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/lbGamePoint"
                        app:layout_constraintHorizontal_bias="0.493"
                        app:layout_constraintStart_toStartOf="@+id/lbGamePoint"
                        app:layout_constraintTop_toBottomOf="@+id/lbGamePoint"
                        tools:text="100" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

        <Button
                android:id="@+id/btnGamePlay"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="#4CAF50"
                android:text="@string/btn_start_game"
                android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

        <ImageView
                android:id="@+id/dice_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="#F44336"
                android:layout_centerInParent="true"
                android:contentDescription="@string/dice_image_contentDescription"
                app:srcCompat="@drawable/ic_dice1"/>

    </RelativeLayout>

</LinearLayout>